--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-resizable-panels": "^3.0.3",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
